--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port = 4242
-spring.datasource.url = jdbc:mysql://localhost:3306/poslovniProcesi?useSSL=false&createDatabaseIfNotExist=true
+server.port = 3000
+spring.datasource.url = jdbc:mysql://localhost:3306/upp_db?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username =root
 spring.datasource.password =root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
